# npy-ocaml

./: dune-project  npy.opam
src/: npy.mli
tests/: dune  test.ml
